syntax = "proto3";// 版本
package kcwiki.msgtransfer.protobuf; // 命名空间

option java_package = "protobuf.proto";//生成java包名
option java_outer_classname = "XTraffic"; //生成Java类名
option java_multiple_files = true;

message XTrafficProto {
    enum ProtoType {
        SYSTEM = 0;
        NON_SYSTEM = 1;
    }
    enum ProtoCode {
        FAILURE = 0;
        SUCCESS = 1;
        ERROR = 2;
		UNKNOWN = 3;
    }
    ProtoType proto_type = 1;
    ProtoCode proto_code = 2;
    string proto_module = 3;
    bytes proto_payload = 4;
	string proto_sender = 5;
	string proto_recipient = 6;
    int64 timestamp = 7;
    string sign = 8;
}